--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "gatsby-source-filesystem": "^2.0.8",
     "gatsby-transformer-sharp": "^2.1.8",
     "nuka-carousel": "^4.4.7",
+    "path": "^0.12.7",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
