Fixed todos and added dependacies for youtube videos

--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sharp": "^2.0.14",
+    "gatsby-remark-embed-video": "^1.7.0",
+    "gatsby-remark-embed-youtube": "0.0.7",
     "gatsby-source-contentful": "^2.0.26",
     "gatsby-source-filesystem": "^2.0.8",
+    "gatsby-source-youtube": "^1.0.1",
+    "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.8",
     "nuka-carousel": "^4.4.7",
     "path": "^0.12.7",
