--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Aviraj Mandair <amandair@and.digital, Chris Withall <cwithall@and.digital",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.10.0",
     "bootstrap": "^4.2.1",
     "dotenv": "^6.2.0",
     "gatsby": "^2.0.76",
@@ -13,6 +14,7 @@
     "gatsby-plugin-offline": "^2.0.16",
     "gatsby-plugin-react-helmet": "^3.0.2",
     "gatsby-plugin-sharp": "^2.0.14",
+    "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-remark-embed-video": "^1.7.0",
     "gatsby-remark-embed-youtube": "0.0.7",
     "gatsby-source-contentful": "^2.0.26",
@@ -20,6 +22,7 @@
     "gatsby-source-youtube": "^1.0.1",
     "gatsby-transformer-remark": "^2.2.0",
     "gatsby-transformer-sharp": "^2.1.8",
+    "jquery": "^3.3.1",
     "nuka-carousel": "^4.4.7",
     "path": "^0.12.7",
     "prop-types": "^15.6.2",
@@ -28,7 +31,8 @@
     "react-dom": "^16.7.0",
     "react-dropdown": "^1.6.4",
     "react-helmet": "^5.2.0",
-    "reactstrap": "^7.1.0"
+    "reactstrap": "^7.1.0",
+    "styled-components": "^4.1.3"
   },
   "keywords": [
     "gatsby"
