--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "react-dropdown": "^1.6.4",
     "react-helmet": "^5.2.0",
     "reactstrap": "^7.1.0",
-    "styled-components": "^4.1.3"
+    "styled-button-component": "^3.0.1",
+    "styled-components": "^4.1.3",
+    "styled-dropdown-component": "^3.0.1"
   },
   "keywords": [
     "gatsby"
